# pcat2_manager

./: README  README.md  meson.build
mods/: Makefile  pcat-spi-display-logo.h  pcat-spi-display.c  photonicat-pm.c
src/: common.h  controller.c  main.c  meson.build  modem-manager.c  modem-manager.h  pcat-fwgen.py  pcat-pmu-updater.c  pmu-manager.c  pmu-manager.h  tinywatchdog.c
test/: test.py
